# smart-switch-pico

./: CMakeLists.txt  README.md  config.h  mqtt_layer.c  mqtt_layer.h  smart_switch.c  ssl_layer.c  ssl_layer.h  ssl_trusted_anchors.h  tcp_layer.c  tcp_layer.h
